--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "marzipano": "^0.10.2",
     "next": "16.1.6",
+    "panzoom": "^9.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
